Fix - page layout cutoff issue2

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -141,7 +141,7 @@
 
 
 .background-pg2-lgeo {
-  width: 90%;
+  width: 100%;
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
@@ -149,7 +149,7 @@
 }
 
 .background-pg3-lgeo {
-  width: 90%;
+  width: 100%;
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
